# legged_base

./: CMakeLists.txt  README.md  package.xml  singulatity.m
cmake/: legged_modelConfig.cmake.in
config/: go2-config.yaml
include/legged_model/: LeggedModel.h  LeggedState.h  Lie.h  Math.h  Rotation.h  Timer.h  Utils.h
src/: LeggedModel.cpp  LeggedState.cpp  Rotation.cpp
test/: LeggedModel_test.cpp  LeggedState_test.cpp  Lie_test.cpp  Math_test.cpp  Rotation_test.cpp
